--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,18 @@
-# Environment variables for Conversation service
-WORKSPACE_ID=8e9097c4-59a1-4b50-a629-1e224e7e2de1
-CONVERSATION_USERNAME=c2e271e8-03f4-4061-a6a1-ec65d3548008
-CONVERSATION_PASSWORD=is5rAWuSDWiI
+# Environment variables for Assistant(Conversation) service
+WORKSPACE_ID=
+CONVERSATION_USERNAME=
+CONVERSATION_PASSWORD=
 
-# Environment variables for Maximo REST API service
-MAXIMO_AUTH=Basic bWF4aW1vOnJlbW90ZTE=
+# Environment variables for Discovery service
+DISCOVERY_USERNAME=
+DISCOVERY_PASSWORD=
+ENVIRONMENT_ID=
+COLLECTION_ID=
+DISCOVERY_URL=https://gateway.watsonplatform.net/discovery/api/v1
+
+# Environment variables for Maximo/ICD REST API service
+MAXIMO_AUTH=
 MAXIMO_CONTEXT_TYPE=application/json
-MAXIMO_REST_URL=https://tivsupport-tst.rtp.raleigh.ibm.com/meaweb/os/MXSR
-MAXIMO_PERSONID=maximo
+MAXIMO_REST_URL=https://tivsupport-dev.rtp.raleigh.ibm.com/meaweb/os/MXSR
+MAXIMO_PERSONID=
+MAXIMO_UI_URL=https://tivsupport-dev.rtp.raleigh.ibm.com/maximo/ui/?event=loadapp&value=sr&additionalevent=useqbe&forcereload=true/&additionaleventvalue=ticketid=
