--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,23 @@ readme_images_orig
 node_modules/
 dist/
 temp/
+Maximo-ICD/
 .idea/
+video/
+wiki/
+readme/
 coverage
 .env
+.env_working_20180315
 npm-debug.log
+git_url.txt
+app_backup_20180329.js
+app_Conversation_working_20180315.js
+app_long_working.js
+app_working_20180329.js
+test.js
+README_b4.md
+README_b4.pdf
+training/ITSM_workspace_Assistant&Discovery.json
+training/ITSM_workspace_AssistantOnly.json
+training/ITSM_workspace_dev.json
