--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "async": "^2.6.0",
     "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "ibm-maximo-api": "^1.0.11",
-    "watson-developer-cloud": "^2.8.1"
+    "python": "^0.0.4",
+    "watson-developer-cloud": "^2.8.1",
+    "node-datetime": "*",
+    "metrics-tracker-client": "*"
   },
   "devDependencies": {
     "babel-eslint": "^6.0.4",
