--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "ibm-maximo-api": "^1.0.11",
     "python": "^0.0.4",
     "watson-developer-cloud": "^2.8.1",
-    "node-datetime": "*",
-    "metrics-tracker-client": "*"
+    "node-datetime": "*"
   },
   "devDependencies": {
     "babel-eslint": "^6.0.4",
