--- a/.env.example
+++ b/.env.example
@@ -1,35 +1,17 @@
 # Environment variables for Assistant(Conversation) service
 WORKSPACE_ID=
-CONVERSATION_USERNAME=
-CONVERSATION_PASSWORD=
+ASSISTANT_URL=
+ASSISTANT_IAM_APIKEY=
 
 # Environment variables for Discovery service
-DISCOVERY_USERNAME=
-DISCOVERY_PASSWORD=
-ENVIRONMENT_ID=
-COLLECTION_ID=
-DISCOVERY_URL=https://gateway.watsonplatform.net/discovery/api/v1
+DISCOVERY_URL=
+DISCOVERY_ENVIRONMENT_ID=
+DISCOVERY_COLLECTION_ID=
+DISCOVERY_IAM_APIKEY=
 
 # Environment variables for Maximo/ICD REST API service
-
-###################################
-# for the new release of ICD/Maximo
-###################################
-
-# Lee's instance, maxadmin:KhtNPgpc
-MAXIMO_AUTH=bWF4YWRtaW46S2h0TlBncGM=
+MAXIMO_AUTH=
 MAXIMO_CONTEXT_TYPE=application/json
-MAXIMO_REST_URL=https://siwr35cdwsa-tsb.sccd.ibmserviceengage.com/maximo_t4hj/oslc/os/MYSR
-MAXIMO_PERSONID=MAXADMIN
-MAXIMO_CLASSSTRUCTUREID=21
-MAXIMO_PREFIX=sccd
-MAXIMO_UI_URL=https://siwr35cdwsa-tsb.sccd.ibmserviceengage.com/maximo_t4hj/ui/?event=loadapp&value=sr&additionalevent=useqbe&forcereload=true/&additionaleventvalue=ticketid=
-
-###################################
-# for the old release of ICD/Maximo
-###################################
-#MAXIMO_AUTH=
-#MAXIMO_CONTEXT_TYPE=application/json
-#MAXIMO_REST_URL=https://tivsupport-dev.rtp.raleigh.ibm.com/meaweb/os/MXSR
-#MAXIMO_PERSONID=
-#MAXIMO_UI_URL=https://tivsupport-dev.rtp.raleigh.ibm.com/maximo/ui/?event=loadapp&value=sr&additionalevent=useqbe&forcereload=true/&additionaleventvalue=ticketid=
+MAXIMO_REST_URL=https://tivsupport-dev.rtp.raleigh.ibm.com/meaweb/os/MXSR
+MAXIMO_PERSONID=
+MAXIMO_UI_URL=https://tivsupport-dev.rtp.raleigh.ibm.com/maximo/ui/?event=loadapp&value=sr&additionalevent=useqbe&forcereload=true/&additionaleventvalue=ticketid=
